Add support for translating the following termcap commands into terminfo:   %B %D %r %2 %3 %d %+ %> %. Fixes PR bin/44692.